# vitalle-ops

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py
docs/: ARCHITECTURE.md  DATABASE.md  OPERATIONS.md  PERMISSIONS.md
scripts/: seed_vitalle_ops.py
sql/: 0001_vitalle_ops.sql
src/vitalle_ops/: __init__.py  __main__.py  api.py  auth.py  config.py  db.py  domain.py  migrations.py  router.py  store.py  support.py
supabase/: config.toml
tests/: test_domain.py
web/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: actions.ts  globals.css  layout.tsx  page.tsx  vitalle-actions.ts
web/app/admin/configuracoes/: page.tsx
web/app/admin/setores/: page.tsx
web/app/admin/tarefas/: page.tsx
web/app/admin/tarefas/[id]/: page.tsx
web/app/admin/usuarios/: page.tsx
web/app/alertas/: page.tsx
web/app/auditoria/: page.tsx
web/app/auth/callback/: route.ts
web/app/auth/google/: route.ts
web/app/auth/refresh/: route.ts
web/app/dashboard/: page.tsx
web/app/historico/: page.tsx
web/app/login/: page.tsx
web/app/meu-dia/: page.tsx
web/app/operacao/: page.tsx
web/app/relatorios/: page.tsx
web/app/setores/: page.tsx
web/app/setores/[slug]/: page.tsx
web/components/vitalle/: AdminSectorTaskBoard.tsx  CandyRewardTracker.tsx  OpsShell.tsx  SectorKanban.tsx  VitalleCards.tsx  VitalleForms.tsx  VitalleLoginForm.tsx  VitalleLoginForms.tsx
web/lib/: session.ts  supabase-auth.ts  vitalle-access.ts  vitalle-api.ts  vitalle-db-direct.ts  vitalle-session.ts  vitalle-types.ts
(+2 files in other folders)
